syntax = "proto3";

package bc;

message BlockFingerprint {
    string blockchain = 1;
    string hash = 2;
    uint64 timestamp = 3;
    bool is_current = 4;
}

// Miner block input
message MinerRequest {
    string merkle_root = 1;
    repeated BlockFingerprint fingerprints = 2;
}

// Miner block output
message MinerResponse {
    string nonce = 1;
}
